[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Peijun Ma <peijun.ma@protonmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }

[dev-dependencies]
reqwest = "0.11.0"
